[package]
name = "kernel"
version = "0.10.0"
edition = "2021"

[lib]
# Phase 0 — kernel is rlib-only. The Python cdylib (`nexus_kernel.so`)
# now lives in `rust/nexus-cdylib/`, which depends on this rlib plus
# its peers (lib, raft, …) and owns the `#[pymodule]` envelope. This
# cycle-breaks `<peer-crate> → kernel` (compile dep) ↔ `kernel →
# <peer-crate>` (cdylib registration) — the latter is now wholly
# inside `nexus-cdylib`. Lib name matches the package name (was
# `nexus_kernel` while kernel was the cdylib; that name belongs to
# the cdylib build artifact now).
name = "kernel"
crate-type = ["rlib"]

[dependencies]
contracts = { workspace = true }
lib = { workspace = true, features = ["python"] }
# Phase 3: kernel does NOT depend on `services` — direction is one-way
# `services -> kernel`.  The pre-Phase-3 dep was an artefact of
# AgentTable being miscategorised as service-tier; it moved to
# `crate::core::agents::table` (kernel SSOT) so the cycle clears.
# Phase H (Phase 5 federation DI): the `kernel -> raft` edge is
# inverted — raft now depends on kernel for `kernel::abc::MetaStore`,
# `kernel::hal::federation::FederationProvider`, etc.  Raft state-
# machine impls (raft_meta_store, replication_scanner,
# wal_stream_backend) live in the raft crate alongside the
# `RaftFederationProvider` trait impl.
# `extension-module` lives on the `nexus-cdylib` pyo3 dep only — Cargo
# unifies pyo3 features at link time, so all transitive users see the
# cdylib-correct linkage. rlibs must NOT enable it themselves (would
# break `cargo test` on the rlib alone, and pollutes other consumers).
pyo3 = { version = "0.27.2", features = ["hashbrown"] }
serde = { workspace = true }
serde_json = { workspace = true }
ahash = { workspace = true }
regex = { workspace = true }
memchr = { workspace = true }
globset = { workspace = true }
blake3 = { workspace = true }
fastcdc = { workspace = true }
string-interner = { workspace = true }
roaring = { workspace = true }
encoding_rs = "0.8.35"
rayon = "1.11"
bloomfilter = "3.0"
libc = "0.2"
memmap2 = "0.9.9"
tempfile = "3"
dashmap = "6.1"
parking_lot = "0.12"
redb = "2"
uuid = { version = "1", features = ["v4"] }
lru = "0.16"
simdutf8 = "0.1"
simsimd = "6"
crc32fast = { workspace = true }
# Phase 4 (full): kernel uses `transport-primitives` (the low-level
# crate after the split) for TlsConfig / connection-pool / peer
# addressing; the high-level `transport` crate depends on kernel,
# so we can't depend on it back without closing the cycle.
transport-primitives = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "sync", "time", "macros"] }
futures = "0.3"
tracing = "0.1"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false, optional = true }
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
futures-util = { version = "0.3", default-features = false, features = ["sink"], optional = true }
tokio-tungstenite = { version = "0.26", optional = true }
k256 = { version = "0.13", features = ["schnorr"], optional = true }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
base64 = "0.22"
mimalloc = { workspace = true, optional = true }

[features]
default = ["mimalloc", "connectors", "py-hook-adapters"]
mimalloc = ["dep:mimalloc"]
connectors = ["dep:reqwest", "dep:hmac", "dep:sha2", "dep:futures-util"]
nostr = ["dep:tokio-tungstenite", "dep:k256", "dep:sha2", "dep:futures-util"]
# §11 Phase 14: Python hook/resolver adapters. Enabled by default (POST hooks
# still use PyInterceptHookAdapter). Disable to compile out all Python-to-Rust
# adapter bridging — requires ALL hooks to be NativeInterceptHook impls.
py-hook-adapters = []

[build-dependencies]
tonic-build = "0.13"
# Vendored protoc binary so kernel build works on any host without a
# system-wide protobuf-compiler install. Tier-1 platforms (linux/macos/windows
# × x86_64/aarch64) all covered by the pre-compiled binary the crate ships.
protoc-bin-vendored = "3"

[dev-dependencies]
criterion = "0.5"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }  # Self-signed CAs for federation_client tests
tempfile = "3"

[[bench]]
name = "prefix_bench"
harness = false
# §11 observer Rust-ification
