[build-system]
requires = ["maturin>=1.7,<3.0"]
build-backend = "maturin"

[project]
name = "nexus-kernel"
version = "0.9.43"
description = "Fast Rust-based ReBAC permission computation for Nexus"
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
module-name = "nexus_kernel"
