[package]
name = "nexus-cdylib"
version = "0.10.0"
edition = "2021"
description = "Python entry-point cdylib (produces nexus_runtime.so / nexus_runtime.pyd). Composes the kernel + lib + raft + backends + services + transport rlibs into the single shared object Python imports as `nexus_runtime`. Build artifact only — not an architectural tier; see KERNEL-ARCHITECTURE.md §6.1."

[lib]
# Wheel module name: `nexus_runtime` (Phase 3 restructure plan #5
# rename — the cdylib aggregates the whole runtime, not just the
# kernel rlib).  `kernel` stays the rlib name on the Rust side.
name = "nexus_runtime"
crate-type = ["cdylib"]

[dependencies]
# kernel sits behind workspace `default-features = false` (so
# `backends`, `services`, etc. depending on the rlib do not pull
# kernel runtime defaults like the global mimalloc allocator).
# nexus-cdylib re-enables those defaults explicitly — this is the
# only build artifact that owns the `nexus_runtime` runtime.
kernel = { workspace = true, features = [
    "mimalloc",
    "connectors",
    "py-hook-adapters",
] }
lib = { workspace = true, features = ["python"] }
# `raft` already enters the workspace dep map with
# `features = ["python", "grpc"]` — nothing to add.
raft = { workspace = true }
# Phase 3: services with the `python` feature enabled so its PyO3
# entry points (currently `install_audit_hook`) compose into the
# single `nexus_runtime.so` cdylib.
services = { workspace = true, features = ["python"] }
# Backends with the `python` feature enabled so the `BlobPackEngine`
# pyclass + `DefaultObjectStoreProvider` registration compose into
# the single `nexus_runtime.so` cdylib. Backends owns the 17-way
# `ObjectStoreProvider::build` switch the kernel calls through
# `kernel::hal::object_store_provider::get_provider()`.
backends = { workspace = true, features = ["python"] }
# Transport with `python` feature enabled — registers
# `PyVfsGrpcServerHandle` + `start_vfs_grpc_server` (front-door VFS
# gRPC server) into nexus_runtime module.
transport = { workspace = true, features = ["python"] }
# rpc with `python` feature enabled — registers `PyFederationClient`
# + `install_transport_wiring` (peer-blob client wiring) into the
# nexus_runtime module. Driver-outgoing RPC clients (peer-blob,
# federation, VFS) consolidate here in the rpc driver-layer crate.
rpc = { workspace = true, features = ["python"] }
# Sole crate that enables `extension-module`. Cargo unifies pyo3
# features across the workspace, so every transitive pyo3 user
# (kernel, lib, raft, backends, …) sees the cdylib-correct
# linkage shape: pyo3 does NOT link libpython itself; the .so is
# loaded by the running Python which provides the symbols.
pyo3 = { version = "0.27.2", features = ["extension-module"] }

[features]
# Pass-through for the optional `nostr` backend so Docker / CI
# `--features nostr` flags keep working at the new entry point.
nostr = ["kernel/nostr"]
