[package]
name = "nexus-cdylib"
version = "0.10.0"
edition = "2021"
description = "Python entry-point cdylib (produces nexus_runtime.so / nexus_runtime.pyd). Composes the kernel + lib + raft + backends + services + transport rlibs into the single shared object Python imports as `nexus_runtime`. Build artifact; see KERNEL-ARCHITECTURE.md §6.1."

[lib]
# Wheel module name `nexus_runtime` aggregates the whole runtime;
# `kernel` is the rlib name on the Rust side.
name = "nexus_runtime"
crate-type = ["cdylib"]

[dependencies]
# kernel sits behind workspace `default-features = false` (so
# `backends`, `services`, etc. depending on the rlib do not pull
# kernel runtime defaults like the global mimalloc allocator).
# nexus-cdylib re-enables those defaults explicitly — this is the
# only build artifact that owns the `nexus_runtime` runtime.
kernel = { workspace = true, features = [
    "mimalloc",
    "connectors",
    "py-hook-adapters",
    "python",
] }
lib = { workspace = true, features = ["python"] }
# After workspace removed `"python"` from raft's default workspace
# features, cdylib must enable it explicitly for PyO3 bindings.
raft = { workspace = true, features = ["python"] }
# Services with the `python` feature enabled so its PyO3 entry points
# (currently `install_audit_hook`) compose into the single
# `nexus_runtime.so` cdylib.
services = { workspace = true, features = ["python"] }
# Backends with the `python` feature enabled so the `BlobPackEngine`
# pyclass + `DefaultObjectStoreProvider` registration compose into
# the single `nexus_runtime.so` cdylib. Backends owns the 17-way
# `ObjectStoreProvider::build` switch the kernel calls through
# `kernel::hal::object_store_provider::get_provider()`.
backends = { workspace = true, default-features = true, features = ["python"] }
# Transport with `python` feature enabled — registers the in-bound
# VFS gRPC server pyclass + starter, the out-bound `PyFederationClient`,
# and the `install_transport_wiring(kernel)` peer-blob-client install
# entry point.
transport = { workspace = true, features = ["python"] }
# Adaptive prefetcher (issue #4057) — exposes `PrefetchEngine` pyclass
# composed into `nexus_runtime.so` so the Python shim can drive
# per-fh read-ahead without round-tripping through Rust backend dispatch.
nexus-prefetch = { workspace = true, features = ["python"] }
# Sole crate that enables `extension-module`. Cargo unifies pyo3
# features across the workspace, so every transitive pyo3 user
# (kernel, lib, raft, backends, …) sees the cdylib-correct
# linkage shape: pyo3 does NOT link libpython itself; the .so is
# loaded by the running Python which provides the symbols.
pyo3 = { version = "0.28.3", features = ["extension-module"] }
# Sudo-code runtime — provides `runtime::spawn_task<K: KernelAbi>`
# that the cdylib boot wires into ManagedAgentService via the
# `SpawnTask` DI trait defined in `services::managed_agent`.
#
# Cross-repo coupling lives **here** at the binary-edge cdylib
# (the allowed seam) instead of in services rlib — services stays
# runtime-agnostic and ships in the slim cluster binary path
# without the sudocode dep. Cdylib path is the Python wheel where
# wiring sudocode-as-managed-agent-runtime is the deployment
# default; no extra wrapper crate.
#
# Lockstep merge order: when sudocode PR sudoprivacy/sudocode#99
# merges to main, bump rev pin to that commit. The current rev
# (sudocode branch HEAD `2b67d5b`) stays reachable in git history
# even after sudocode merges, so re-pinning is optional for
# correctness — only matters for reproducibility audit.
# Pin to sudocode fix/readdir-migration-v2 — spawn_task v2 + readdir migration.
# sys_readdir_backend → readdir (eliminates N per-child sys_stat calls).
sudocode-runtime = { package = "runtime", git = "https://github.com/sudoprivacy/sudocode", rev = "7f48278" }
sudocode-tools = { package = "tools", git = "https://github.com/sudoprivacy/sudocode", rev = "7f48278" }
