[build-system]
requires = ["maturin>=1.7,<3.0"]
build-backend = "maturin"

[project]
name = "nexus-runtime"
version = "0.10.0"
description = "Nexus Python entry-point cdylib (kernel + lib + raft + backends + services + transport composed into nexus_runtime.so)"
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
module-name = "nexus_runtime"
