[package]
name = "nexus-prefetch"
version = "0.1.0"
edition = "2021"
description = "Adaptive prefetcher — per-fh window + pluggable detectors (Sequential / Stride / MajorityTrend). Replaces Python ReadaheadManager. See issue #4057."

[lib]
name = "nexus_prefetch"
crate-type = ["rlib"]

[features]
default = []
python = ["pyo3"]

[dependencies]
bytes = "1"
dashmap = "6.1"
parking_lot = "0.12"
thiserror = "2.0"
tracing = "0.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
pyo3 = { version = "0.28.3", features = ["extension-module"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
criterion = "0.5"

[[bench]]
name = "throughput"
harness = false
