[package]
name = "nexus_fast"
version = "0.1.0"
edition = "2021"

[lib]
name = "nexus_fast"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module", "hashbrown"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
ahash = "0.8.12"  # Fast hashmap for better performance
regex = "1.10"  # Fast regex matching
encoding_rs = "0.8.35"  # Encoding detection for text files
globset = "0.4.18"  # Fast glob pattern matching
rayon = "1.11"   # Parallel iterators for bulk operations
bloomfilter = "3.0"  # Fast Bloom filter for cache miss detection
memmap2 = "0.9.9"  # Memory-mapped file I/O for zero-copy reads
dashmap = "6.1"  # Lock-free concurrent hashmap for L1 metadata cache
string-interner = "0.17"  # String interning for O(1) equality and reduced allocations
lru = "0.16"  # LRU cache for namespace config caching (Issue #861)
memchr = "2.7"  # SIMD-accelerated literal pattern search (Issue #863)
simdutf8 = "0.1"  # SIMD-accelerated UTF-8 validation (Issue #864)
roaring = "0.10"  # Roaring Bitmaps for Tiger Cache acceleration (Issue #896)
simsimd = "6"  # SIMD-accelerated vector similarity (Issue #952)

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
