[package]
name = "nexus_raft"
version = "0.1.0"
edition = "2021"
description = "Raft consensus and embedded storage for Nexus"
authors = ["Nexus Team"]

[lib]
name = "nexus_raft"
crate-type = ["rlib"]

[[bin]]
name = "nexus-witness"
path = "src/bin/witness.rs"

[dependencies]
# Embedded KV storage (general-purpose, reusable)
sled = "0.34"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"  # Fast binary serialization for Raft log entries

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"

# Async runtime (for future gRPC integration)
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"], optional = true }

[dev-dependencies]
tempfile = "3"  # For testing with temporary directories

[features]
default = []
async = ["tokio"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
