[package]
name = "nexus_raft"
version = "0.1.0"
edition = "2021"
description = "Raft consensus and embedded storage for Nexus"
authors = ["Nexus Team"]

# Allow build.rs to set has_protos cfg (set when proto files exist for gRPC codegen)
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(has_protos)"] }

[lib]
# Python module name: nexus._nexus_raft (consistent with _nexus_fast)
name = "_nexus_raft"
crate-type = ["cdylib", "rlib"]  # cdylib for Python, rlib for Rust deps

[[bin]]
name = "nexus-raft-server"
path = "src/bin/raft_server.rs"
required-features = ["grpc"]

[[bin]]
name = "nexus-witness"
path = "src/bin/witness.rs"
required-features = ["grpc"]

[dependencies]
# Embedded KV storage (general-purpose, reusable)
sled = "0.34"

# Raft consensus (tikv/raft-rs)
raft = { version = "0.7", default-features = false, features = ["protobuf-codec"], optional = true }
protobuf = { version = "2.28", optional = true }  # Required by raft-rs
slog = { version = "2.8", optional = true }  # Required by raft-rs for logging

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"  # Fast binary serialization for Raft log entries

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "net", "macros", "signal"], optional = true }

# gRPC (general-purpose, reusable for Raft and webhooks)
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }

# Utilities
bytes = { version = "1", optional = true }

# Python bindings (PyO3 FFI)
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

[build-dependencies]
tonic-build = { version = "0.12", optional = true }

[dev-dependencies]
tempfile = "3"  # For testing with temporary directories
tokio-test = "0.4"

[features]
default = []
# Enable async support (Tokio runtime)
async = ["tokio"]
# Enable gRPC transport (tonic + protobuf)
grpc = ["tonic", "prost", "bytes", "tonic-build", "async", "tracing-subscriber", "consensus"]
# Enable Raft consensus (tikv/raft-rs)
consensus = ["raft", "protobuf", "slog", "async"]
# Enable Python bindings (PyO3 FFI)
python = ["pyo3"]
# Enable everything
full = ["grpc", "consensus", "python"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
