[package]
name = "nexus_raft"
version = "0.1.0"
edition = "2021"
description = "Raft consensus and embedded storage for Nexus"
authors = ["Nexus Team"]

# Allow build.rs to set has_protos cfg (set when proto files exist for gRPC codegen)
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(has_protos)"] }

[lib]
# Python module name: nexus._nexus_raft (consistent with _nexus_fast)
name = "_nexus_raft"
crate-type = ["cdylib", "rlib"]  # cdylib for Python, rlib for Rust deps

[[bin]]
name = "nexus-raft-server"
path = "src/bin/raft_server.rs"
required-features = ["grpc"]

[[bin]]
name = "nexus-witness"
path = "src/bin/witness.rs"
required-features = ["grpc"]

[dependencies]
# Embedded KV storage — sled is default, redb is opt-in via `storage-redb` feature.
# sled 0.34: perpetual beta but battle-tested in this codebase.
# redb 2.x: 1.0 stable since June 2023, use --features storage-redb to enable.
# See: docs/rfcs/adr-raft-sled-strategy.md
sled = "0.34"
redb = { version = "2", optional = true }
tempfile = { version = "3", optional = true }  # Used by redb's open_temporary()

# Raft consensus (tikv/raft-rs)
raft = { version = "0.7", default-features = false, features = ["protobuf-codec"], optional = true }
protobuf = { version = "2.28", optional = true }  # Required by raft-rs
slog = { version = "2.8", optional = true }  # Required by raft-rs for logging

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"  # Fast binary serialization for Raft log entries

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "net", "macros", "signal"], optional = true }

# gRPC (general-purpose, reusable for Raft and webhooks)
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }

# Utilities
bytes = { version = "1", optional = true }

# Python bindings (PyO3 FFI)
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

[build-dependencies]
tonic-build = { version = "0.12", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []

# Use redb 2.x instead of sled 0.34 for embedded storage.
# Both backends export identical types (SledStore, SledTree, etc.).
# Default = sled. Enable this flag to switch to redb.
storage-redb = ["dep:redb", "dep:tempfile"]

# Enable async support (Tokio runtime)
async = ["tokio"]

# Enable Python bindings (PyO3 FFI) — production path.
# Provides LocalRaft for ~5μs metadata/lock operations.
python = ["pyo3"]

# Enable Raft consensus (tikv/raft-rs) — EXPERIMENTAL, default OFF.
# Not used in production. Preserved for future multi-node support.
# See: docs/rfcs/adr-raft-sled-strategy.md (Decision 2)
consensus = ["raft", "protobuf", "slog", "async"]

# Enable gRPC transport (tonic + protobuf) — EXPERIMENTAL, default OFF.
# Requires `consensus` feature. Not used in production.
# See: docs/rfcs/adr-raft-sled-strategy.md (Decision 4)
grpc = ["tonic", "prost", "bytes", "tonic-build", "async", "tracing-subscriber", "consensus"]

# Enable everything (including experimental features)
full = ["grpc", "consensus", "python", "storage-redb"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
