[package]
name = "nexus_wal"
version = "0.1.0"
edition = "2021"
description = "Rust-accelerated Write-Ahead Log for Nexus event persistence"
authors = ["Nexus Team"]

[lib]
name = "_nexus_wal"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module"] }
crc32fast = "1.4"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "wal_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
